--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -28,13 +28,9 @@ jobs:
         sleep 10  # Wartezeit, bis die App läuft
 
     - name: Run ZAP Baseline Scan (Docker)
-      run: |
-        docker pull zaproxy/zap-stable
-        docker run --rm -v $(pwd):/zap/wrk/:rw -t zaproxy/zap-stable zap-baseline.py \
-          -t http://localhost:3000 \
-          -r zap_report.html \
-          -J zap_report.json \
-          -z "-config api.disablekey=true"
+      uses: zaproxy/action-full-scan@v0.12.0
+      with:
+        target: 'http://localhost:4200'
 
     - name: Upload ZAP HTML Report
       uses: actions/upload-artifact@v4
