--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -46,4 +46,4 @@ jobs:
 
     - name: Fail on High-Risk Alerts
       run: |
-        cat zap_report.json | jq '.site[].alerts[] | select(.risk == "High")' && exit 1 || exit 0
+        cat report_json.json | jq '.site[].alerts[] | select(.risk == "High")' && exit 1 || exit 0
