--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -31,6 +31,9 @@ jobs:
       uses: zaproxy/action-full-scan@v0.12.0
       with:
         target: 'http://localhost:4200'
+        fail_action: true
+        rules_file_name: '.zap/rules.tsv'
+        cmd_options: '-a'
 
     - name: Upload ZAP HTML Report
       uses: actions/upload-artifact@v4
