--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: 'latest'
 
     - name: Install Dependencies
       run: npm install
@@ -25,9 +25,9 @@ jobs:
     - name: Start App in Background
       run: |
         npm start &
-        sleep 10  # Wartezeit, bis die App läuft
+        sleep 4  # Wartezeit, bis die App läuft
 
-    - name: Run ZAP Baseline Scan (Docker)
+    - name: Run ZAP Full Scan
       uses: zaproxy/action-full-scan@v0.12.0
       with:
         target: 'http://localhost:4200'
@@ -38,13 +38,3 @@ jobs:
       with:
         name: zap-html-report
         path: report_html.html
-
-    - name: Upload ZAP JSON Report
-      uses: actions/upload-artifact@v4
-      with:
-        name: zap-json-report
-        path: report_json.json
-
-    - name: Fail on High-Risk Alerts
-      run: |
-        cat report_json.json | jq '.site[].alerts[] | select(.risk == "High")' && exit 1 || exit 0
