--- a/.github/workflows/zap-scan.yml
+++ b/.github/workflows/zap-scan.yml
@@ -28,7 +28,7 @@ jobs:
         sleep 4  # Wartezeit, bis die App läuft
 
     - name: Run ZAP Full Scan
-      uses: zaproxy/action-full-scan@v0.12.0
+      uses: zaproxy/action-full-scan@latest
       with:
         target: 'http://localhost:4200'
         cmd_options: '-a'
@@ -37,4 +37,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: zap-html-report
-        path: report_html.html
+        path: ./report_html.html
